--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,18 @@ header h1 {
   -webkit-text-fill-color: transparent;
 }
 
+.answer-btn.correct {
+  background-color: #4CAF50 !important; /* Green */
+  color: white;
+}
+
+.answer-btn.incorrect {
+  background-color: #f44336 !important; /* Red */
+  color: white;
+}
+
+
+
 #start-quiz-button {
   display: flex;
   margin: auto;
@@ -345,6 +357,24 @@ header h1 {
   margin-top: -0.7rem;
   margin-left: 0.2rem;
   letter-spacing: 0.1rem;
+}
+
+#btn-restart {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1rem;
+  border: none;
+  background: #9e5ef8;
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 24px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#btn-restart:hover,
+#btn-restart:focus {
+  background: #9e5ef8;
+  color: white;
 }
 
 @keyframes slide-in-from-bottom {
